# cAppjon

./: .gitignore  Dockerfile  README.md  iv.yaml  pyproject.toml
.circleci/: config.yml
.github/workflows/: docker-publish.yml  test-version.yml
cAppjon/: constantes.py  errores.py  nota.py
cappjon/: cappjon.py  config.py  constantes.py  errores.py  hash.py  logger.py  manejador.py  nota.py
docs/: CI_doc.md  docker_doc.md  logging.md  user_journey  usuarios.md
src/: cajon.py  nota.py
test/: nota_correcta.py  nota_vacia.py  script_check.py  script_test.py  test_manejador.py  test_nota_corta.py  test_nota_larga.py  test_nota_vacia.py  tests.py
