[tool.poetry]
name = "cAppjon"
version = "0.1.0"
description = "Programa para almacenar notas de forma automática"
authors = ["Jose Manu <jmgl.rm@gmail.com>"]
license = "GPL 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
